Fixed some bugs on small screens

--- a/styles.css
+++ b/styles.css
@@ -134,13 +134,16 @@ body {
   }
 
 
-/* @media screen and (max-width: 900px) {
-    #myself {
-        height: 400px;
-        align-self: center;
+@media screen and (max-width: 900px) {
+    .game-columns {
+        grid-template-columns: 1fr;
     }
 
-    .description {
-        float: left;
+    .game-column-2 {
+        grid-column: 1;
     }
-    } */
+
+    .game-column-3 {
+        grid-column: 1;
+    }
+    }
